# cross-chain-starter

./: .env.example  .gitignore  NON-EVM-BRIDGES.md  PHASE-OVERVIEW.md  QUICK-START-GUIDE.md  STELLAR-SOLANA-SUMMARY.md  gas-report.txt  hardhat.config.js  package.json  plan.md  solana-poh-demo.cjs
chainswap/: .gitignore  EXCHANGE-RATE-DEEP-DIVE.md  INDEX.md  PROJECT-SUMMARY.md  QUICK-START.md  README.md  WHATS-NEW.md  hardhat.config.js  package.json
chainswap/contracts/: PriceOracle.sol
chainswap/deployments/: .gitkeep
chainswap/relayer/: package.json
chainswap/test/: MockUniswapRouter.sol  chainswap.test.js
contracts/bridges/: BridgeBSC.sol  BridgeEthereum.sol
contracts/tokens/: SourceToken.sol  (+1 more)
deployments/: chain1.json  chain2.json
docs/: 01-CHAINSWAP-GUIDE.md  02-STELLAR-SOLANA-GUIDE.md  03-ONRAMP-GUIDE.md  04-OFFRAMP-GUIDE.md  05-VIRTUAL-CARD-GUIDE.md  BRIDGE-DATA-FLOW-VISUALIZATION.md  BRIDGE-FLOW-SUMMARY.md  CROSS-CHAIN-BRIDGE-DEEP-DIVE.md  ETHEREUM-FUNDAMENTALS-DEEP-DIVE.md  KNOWLEDGE-MAP-UPCOMING-PROJECTS.md  QUICK-REFERENCE.md  README.md
phases/: QUICK-START.md  README.md  phase-1-setup.md  phase-2-contracts.md  phase-3-deployment.md  phase-4-testing.md  phase-5-relayer.md  phase-6-monitoring.md
relayer/: package.json
scripts/: test-bridge.js
solana-bridge/: .gitignore  Anchor.toml  README.md
solana-bridge/programs/solana-bridge/: Cargo.toml
solana-bridge/programs/solana-bridge/src/: lib.rs
stellar-bridge/: .env.example  README.md  package.json
stellar-learning/: .env.example  README.md  debug-env.js  hardhat.config.js  package.json
(+96 files in other folders)
