[package]
name = "solana-bridge"
version = "0.1.0"
description = "Solana to Ethereum cross-chain bridge program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
